Debugging the scribble-fill. I reverted to a straight up convex hull fill, but now detect followup pen movement that originates in the recently-drawn region. This lets me quickly keep filling non-convex shapes by just lifting the pen and setting it back down.